# notion-digest

./: Cargo.toml  MIT-LICENSE  README.md
src/: local_mail.rs  main.rs  notion.rs  sendgrid.rs
templates/: email.html
