[package]
name = "notion-digest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.1"
rand = "0.8.5"
askama = "0.12.1"
lettre = "0.11.2"
futures = "0.3.29"
scraper = "0.18.1"
